# ntwx

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/ntwx/: __init__.py  _version.py  singleton.py
tests/: test_empty.py
